# 2DslalomSIM

./: ARCHITECTURE.md  BUILD_STATUS.md  CHANGES.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  package.xml
auv_msgs/: CMakeLists.txt
auv_msgs/action/: Interrupt.action  Setpoint.action
auv_msgs/msg/: ImuAccel.msg  Map.msg  ObjectConfidence.msg  ObjectDetected.msg  ObjectDetections.msg  PwmData.msg  ThrusterForces.msg  VisionObjectsConfidence.msg
auv_msgs/srv/: AlignService.srv
config/: params.yaml
slalom_interfaces/: CMakeLists.txt  package.xml
slalom_interfaces/msg/: CameraDetection.msg  CameraDetections.msg  Setpoint.msg  State.msg
slalom_simulator/: README.md  controller_node.py  imu1_localization_node.py  imu2_localization_node.py  package.xml  setup.cfg  setup.py  simulator_node.py  utils.py  verify_project.sh
slalom_simulator/config/: params.yaml
slalom_simulator/launch/: slalom.launch.py
slalom_simulator/slalom_simulator/: __init__.py  base_imu_localization_node.py  config_loader.py  controller_node.py  ground_truth_localization_node.py  imu1_localization_node.py  imu2_localization_node.py  kalman_localization_node.py  params.yaml  pressure_sensor_node.py  simulator_node.py  utils.py
